# wasmer-demo

./: README.md  tee-on-mac.md
node-host/: .gitignore  index.ts  nodemon.json  package.json  tsconfig.json  tslint.json
node-host/env/: dev.env
node-host/public/: wasm.js
node-host/src/: app.ts  config.ts
node-host/src/router/: Base.ts  index.ts  ping.ts
node-host/src/service/: Base.ts
node-host/src/utility/: crypto.ts  index.ts
node-host/test/: jest_setup.js
node-host/upload/: info.md
node-host/upload/test/: application_test.xlsx  infrastructure_test.xlsx
tee-host/: Cargo.toml  build.rs
tee-host/proto/: helloworld.proto
tee-host/src/: client.rs  main.rs  server.rs  wasmer.rs
test-wasms/hello_world/: Cargo.toml
test-wasms/hello_world/src/: lib.rs
